// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`follow-imports cjs named export 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/exports/cjs-named-export.js",
  "from": "../exports/cjs-named-export",
  "loc": Object {
    "end": Object {
      "column": 23,
      "line": 1,
    },
    "start": Object {
      "column": 21,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/examples/exports/cjs-named-export.js",
  "source": "const Button = () => {};
exports.Button = Button;
",
}
`;

exports[`follow-imports export all 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "from": "",
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports export node modules 1`] = `
Object {
  "exportedAs": "ControlsTable",
  "filePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "from": "@component-controls/storybook",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 66,
    },
    "start": Object {
      "column": 28,
      "line": 18,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/node_modules/@component-controls/storybook/dist/index.js",
  "source": "'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var tslib = require('tslib');
var React = _interopDefault(require('react'));
var coreEvents = require('@storybook/core-events');
var core = require('@component-controls/core');
var blocks = require('@component-controls/blocks');
var shared = require('./shared.js');
require('polished');
require('@storybook/theming');
var ThemeProvider = require('./ThemeProvider.js');
var blocks$1 = require('@storybook/addon-docs/blocks');

const ControlsTable = _a => {
  var {
    id: propId,
    name
  } = _a,
      rest = tslib.__rest(_a, [\\"id\\", \\"name\\"]);

  const {
    id,
    controls,
    story,
    api,
    channel
  } = blocks.useControlsContext({
    id: propId,
    name
  });
  const setControlValue = api && api.setControlValue ? api.setControlValue : (storyId, propName, propValue) => {
    if (story) {
      const newValues = core.mergeControlValues(story.parameters.controls, propName, propValue);
      story.parameters.controls = newValues;
      channel.emit(coreEvents.FORCE_RE_RENDER);
      channel.emit(shared.SET_DATA_MSG, {
        storyId,
        controls: newValues
      });
    }
  };
  const clickControl = api && api.clickControl ? api.clickControl : (storyId, propName) => {
    if (controls && controls[propName]) {
      const control = controls[propName];

      if (control && typeof control.onClick === 'function') {
        control.onClick(control);
      }
    }
  };

  if (!story || !controls || controls.disable) {
    return null;
  }

  return id ? React.createElement(ThemeProvider.ThemeProvider, null, React.createElement(blocks.ControlsTable, Object.assign({
    controls: controls,
    storyId: id,
    setControlValue: setControlValue,
    clickControl: clickControl
  }, rest))) : null;
};

const Description = props => {
  return React.createElement(ThemeProvider.ThemeProvider, null, React.createElement(blocks.Description, Object.assign({}, props)));
};

const StorySource = props => {
  return React.createElement(ThemeProvider.ThemeProvider, null, React.createElement(blocks.StorySource, Object.assign({}, props)));
};

const ComponentSource = props => {
  return React.createElement(ThemeProvider.ThemeProvider, null, React.createElement(blocks.ComponentSource, Object.assign({}, props)));
};

const BlockContextProvider = ({
  children
}) => {
  const context = React.useContext(blocks$1.DocsContext);
  const {
    id: currentId,
    clientApi,
    storyStore,
    channel
  } = context;
  return React.createElement(blocks.BlockContext.Provider, {
    value: {
      api: clientApi,
      currentId,
      channel,
      storyStore
    }
  }, children);
};

exports.ThemeProvider = ThemeProvider.ThemeProvider;
exports.BlockContextProvider = BlockContextProvider;
exports.ComponentSource = ComponentSource;
exports.ControlsTable = ControlsTable;
exports.Description = Description;
exports.StorySource = StorySource;
",
}
`;

exports[`follow-imports one level default import 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-default-export.js",
  "from": "./button-default-export",
  "loc": Object {
    "end": Object {
      "column": 24,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-default-export.js",
  "source": "export default () => {};
",
}
`;

exports[`follow-imports one level import 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "from": "./button-named-export",
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports one level index import 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "from": "./",
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "source": "export const Button = () => {};
",
}
`;

exports[`follow-imports one level namespace import 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-default-export.js",
  "from": "./button-default-export",
  "loc": Object {
    "end": Object {
      "column": 24,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-default-export.js",
  "source": "export default () => {};
",
}
`;

exports[`follow-imports simple import 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/direct-import.js",
  "from": "",
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/direct-import.js",
  "source": "export const Button = () => {};
",
}
`;
